--- a/git-app/package.json
+++ b/git-app/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "serverless": "^2.19.0",
     "serverless-dotenv-plugin": "^3.1.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
