--- a/git-app/serverless.yml
+++ b/git-app/serverless.yml
@@ -16,5 +16,5 @@ functions:
     handler: index.handler
     events:
       - http:
-          method: get
+          method: post
           path: /
