--- a/git-app/package.json
+++ b/git-app/package.json
@@ -10,6 +10,7 @@
     "serverless-dotenv-plugin": "^3.1.0"
   },
   "dependencies": {
+    "jsonwebtoken": "^8.5.1",
     "node-fetch": "^2.6.1"
   }
 }
