--- a/module-bundler/bundly.config.json
+++ b/module-bundler/bundly.config.json
@@ -1,7 +1,7 @@
 {
   "entry": "./example/index.js",
   "output": {
-    "path": "./build/build/bundle",
+    "path": "./build",
     "filename": "bundle.js",
     "autoCreateFolder": true
   }
